--- a/VirtusProxyGUI/VirtusProxyPluginsLauncher/mainwindow.ui
+++ b/VirtusProxyGUI/VirtusProxyPluginsLauncher/mainwindow.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>764</width>
-    <height>386</height>
+    <width>870</width>
+    <height>466</height>
    </rect>
+  </property>
+  <property name="baseSize">
+   <size>
+    <width>20</width>
+    <height>5</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
@@ -32,17 +38,20 @@
     </property>
    </layout>
   </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>764</width>
-     <height>26</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <action name="_settings">
+   <property name="text">
+    <string>Настройки</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Q</string>
+   </property>
+  </action>
+  <action name="_loadPlugin">
+   <property name="text">
+    <string>Загрузить новый плагин</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
